# kxk-pc-build

./: .gitignore  package.json
.github/workflows/: release.yml  release_.yml
scripts/: update.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icon-build/: icns.sh  icon.icns
src-tauri/src/: main__.rs
