[package]
name = "app"
version = "1.5.1"
description = "Kxk Tauri App"
authors = ["chenbaolong"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# tauri = { version = "1.4.0", features = ["api-all", "devtools", "windows7-compat"] }
tauri = { version = "1.4.0", features = [ "updater", "api-all", "windows7-compat"] }
# tauri-plugin-localhost = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
# portpicker = "0.1" # used in the example to pick a random free port
winapi = { version = "0.3.8", features = ["winerror"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
